Fix #79: Remove gap below cursor and fix cut-off box shadow.

--- a/styles/advanced-open-file.less
+++ b/styles/advanced-open-file.less
@@ -19,7 +19,9 @@
     }
 
     atom-text-editor {
-        flex: 0 0 2.3em;
+        flex: 0;
+        margin-left: 1px;
+        margin-right: 1px;
     }
 
     .list-group {
